=== x.x.x / 2008-xx-xx

* Added data.get_cookies and data.set_cookie [shane]
* Added admin.get_app_properties and admin.set_app_properties [shane]
* Added admin.get_allocation [shane]

=== 0.9.5 / 2008-02-13

* Next release of documentation