@@ -1,8 +1,9 @@
 === x.x.x / 2008-xx-xx
 
+* Removed actor_id param from templatized feed [shane]
+* Added admin.get_allocation [shane]
 * Added data.get_cookies and data.set_cookie [shane]
 * Added admin.get_app_properties and admin.set_app_properties [shane]
-* Added admin.get_allocation [shane]
 
 === 0.9.5 / 2008-02-13
 
